<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:background="@drawable/login_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textColor="@color/mainColor"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/run_with"
        android:textAlignment="center"
        android:textColor="#8E8E93"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/etId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="33dp"
        android:hint="@string/editTextMain"
        android:minHeight="48dp"
        android:paddingLeft="17dp"
        android:textAppearance="@style/login_page"
        android:textColorHint="@color/grey"
        android:background="@drawable/login_rectangle01"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="17dp"
        android:background="@drawable/login_rectangle02"
        android:text="@string/btnMain"
        android:textAppearance="@style/login_page"
        android:textColor="@color/white" />

    <!--<Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="17dp"
        android:background="@drawable/login_rectangle02"
        android:text="@string/register"
        android:textAppearance="@style/login_page"
        android:textColor="@color/white" />-->

</LinearLayout>