<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/joinMsg1"
            android:textSize="25dp"
            android:textStyle="bold"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >
        <TextView
            android:id="@+id/tvId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:text="마성" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey"/>
    <Button
        android:layout_gravity="center"
        android:padding="10dp"
        android:textAlignment="textStart"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/grey"
        android:text="@string/select_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/join_btn"></Button>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg"
        android:layout_margin="20dp"
        android:textSize="20dp"
        android:textAlignment="center"
        android:textColor="@color/mainColor"/>
    <Button
        android:background="@drawable/join_rectangle"
        android:layout_gravity="center"
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="@string/join_submit_btn" />

</LinearLayout>