<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_margin="15dp"
        android:textSize="25dp"
        android:textStyle="bold"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_gravity="left"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:gravity="right">
            <Button
                android:id="@+id/button_helper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00ff0000"
                android:paddingTop="5dp"
                android:drawableTop="@drawable/helper_btn"
                android:text="@string/helper" />
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            app:srcCompat="@drawable/circle_view" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvMemberStep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:text="0"
                android:textAlignment="center"
                android:textSize="50sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btnNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvMemberStep"
                android:layout_centerInParent="true"
                android:background="#ffffff"
                app:srcCompat="@drawable/new_btn" />

            <ImageButton
                android:id="@+id/mate_helper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btnNew"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="130dp"
                android:layout_marginEnd="54dp"
                android:layout_marginBottom="103dp"
                android:layout_toEndOf="@+id/btnNew"
                android:background="@android:color/transparent"
                android:src="@drawable/mate_helper" />
        </RelativeLayout>
    </FrameLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/mate_btn"
        android:text="@string/sendMsg"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="@color/white" />

</LinearLayout>